finished the mobile and tablet layout for my landing page.

--- a/less/header.less
+++ b/less/header.less
@@ -48,6 +48,33 @@ header {
     }
 }
 
+
+
+
+
+
+// TABLET VIEW STARTS HERE
+@media(max-width: 800px) {
+    header {
+        width:800px;
+        nav {
+            width: 800px;
+        }
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+// MOBILE VIEW STARTS HERE!
 @media(max-width: 500px) {
 
             header {
