--- a/css/index.css
+++ b/css/index.css
@@ -167,6 +167,14 @@ header nav div.links a:hover {
   color: #FFB612;
   text-decoration: underline overline;
 }
+@media (max-width: 800px) {
+  header {
+    width: 800px;
+  }
+  header nav {
+    width: 800px;
+  }
+}
 @media (max-width: 500px) {
   header nav {
     width: 100%;
@@ -243,6 +251,32 @@ header nav div.links a:hover {
   border-top: 1px solid #8c8b8b;
   margin: 0;
 }
+@media (max-width: 800px) {
+  .intro {
+    background-size: cover;
+    height: 500px;
+    width: 100%;
+  }
+  .intro .box {
+    width: 350px;
+    height: min-content;
+    margin: 20px auto 0;
+  }
+  .intro .box h2 {
+    font-size: 25px;
+  }
+  .intro .box p {
+    font-size: 15px;
+  }
+  .intro .box .myButton {
+    height: 39px;
+    width: 75px;
+    padding: 0;
+  }
+  .intro .box .myButton a {
+    font-size: 10px;
+  }
+}
 @media (max-width: 500px) {
   .intro {
     background-size: cover;
@@ -281,7 +315,6 @@ header nav div.links a:hover {
   height: min-content;
   width: 100%;
   background-color: #DE3831;
-  margin-bottom: 20px;
 }
 .middle div.mission h2 {
   font-family: 'Rajdhani', sans-serif;
@@ -306,28 +339,29 @@ header nav div.links a:hover {
 .middle .first,
 .middle .second,
 .middle .third {
-  margin: 3% auto;
+  margin: 3% 20%;
   display: flex;
   justify-content: space-around;
 }
 .middle .first .image,
 .middle .second .image,
 .middle .third .image {
-  width: 40%;
+  width: 800px;
 }
 .middle .first .image img,
 .middle .second .image img,
 .middle .third .image img {
   vertical-align: top;
   height: auto;
-  width: 100%;
+  width: 85%;
   border-radius: 8px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 35, 149, 0.19);
 }
 .middle .first .target,
 .middle .second .target,
 .middle .third .target {
-  width: 40%;
+  width: 600px;
+  align-self: center;
   border-radius: 8px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 35, 149, 0.19);
   height: min-content;
@@ -360,8 +394,65 @@ header nav div.links a:hover {
   color: #070002;
   font-weight: 800;
 }
-.middle .second .target {
-  vertical-align: top;
+.second .target {
+  margin-right: 50px;
+}
+.second ul li {
+  font-family: 'Rajdhani', sans-serif;
+  font-size: 1.3rem;
+  font-weight: 700;
+  letter-spacing: 2px;
+  padding: 1%;
+}
+.second ul li:hover {
+  text-decoration: underline #FFB612;
+  color: #070002;
+  font-weight: 800;
+}
+@media (max-width: 800px) {
+  .middle {
+    margin: 0;
+  }
+  .middle .mission {
+    margin-bottom: -20px;
+  }
+  .middle .first,
+  .middle .second,
+  .middle .third {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+  }
+  .middle .first .image,
+  .middle .second .image,
+  .middle .third .image {
+    width: 100%;
+  }
+  .middle .first .image img,
+  .middle .second .image img,
+  .middle .third .image img {
+    width: 800px;
+    margin: 0;
+    height: auto;
+    border-radius: 0;
+  }
+  .middle .first .target,
+  .middle .second .target,
+  .middle .third .target {
+    width: 800px;
+    margin: 0;
+    border-radius: 0;
+  }
+  .middle .first .target h3,
+  .middle .second .target h3,
+  .middle .third .target h3 {
+    font-size: 30px;
+  }
+  .middle .first .target p,
+  .middle .second .target p,
+  .middle .third .target p {
+    padding: 2%;
+  }
 }
 @media (max-width: 500px) {
   section.middle {
@@ -393,6 +484,7 @@ header nav div.links a:hover {
   section.middle .first .image img,
   section.middle .second .image img,
   section.middle .third .image img {
+    width: 100%;
     margin: 0;
     height: 350px;
     border-radius: 0;
@@ -439,7 +531,7 @@ header nav div.links a:hover {
   justify-content: space-around;
 }
 .last .main .info {
-  width: 20%;
+  width: 30%;
   height: min-content;
   background-color: #E3E3E3;
   border-radius: 8px;
@@ -468,6 +560,32 @@ header nav div.links a:hover {
   font-size: 1.5rem;
   padding: 0 15px 20px;
 }
+@media (max-width: 800px) {
+  .last {
+    margin: 0;
+  }
+  .last h2 {
+    padding-top: 40px;
+    margin: 0 auto 20px;
+    font-size: 40px;
+    text-align: center;
+    font-weight: 900;
+  }
+  .last .main {
+    flex-direction: column;
+  }
+  .last .main .info {
+    width: 780px;
+    margin: 10px auto;
+  }
+  .last .main .info h3 {
+    font-size: 25px;
+  }
+  .last .main .info p {
+    font-size: 20px;
+    font-weight: 700;
+  }
+}
 @media (max-width: 500px) {
   .last {
     margin: 0;
@@ -475,8 +593,9 @@ header nav div.links a:hover {
   .last h2 {
     padding-top: 40px;
     margin: 0 auto 20px;
-    font-size: 30px;
+    font-size: 23px;
     text-align: center;
+    font-weight: 800;
   }
   .last .main {
     flex-direction: column;
