--- a/less/intro.less
+++ b/less/intro.less
@@ -70,6 +70,51 @@
     }
 }
 
+
+// TABLET VIEW STARTS HERE!
+@media(max-width: 800px) {
+    .intro {
+        background-size: cover;
+        height: 500px;
+        width: 100%;
+
+        .box {
+            width: 350px;
+            height: min-content;
+            margin: 20px auto 0;
+            
+            h2 {
+                font-size: 25px;
+            }
+            p {
+                font-size: 15px;
+            }
+            .myButton {
+                height: 39px;
+                width: 75px;
+                padding: 0;
+
+                a {
+                    font-size: 10px;
+                }
+            }
+        }
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+// MOBILE VIEW STARTS HERE!
 @media(max-width: 500px) {
     .intro {
         background-size: cover;
