--- a/less/last.less
+++ b/less/last.less
@@ -19,7 +19,7 @@
         justify-content: space-around;
 
         .info {
-            width: 20%;
+            width: 30%;
             height: min-content;
             background-color: #E3E3E3;
             border-radius: 8px;
@@ -53,8 +53,52 @@
     }
 }
 
-// BEGINNING THE MOBILE VIEW FOR LAST SECTION
 
+// TABLET VIEW STARTS HERE!!
+@media(max-width: 800px) {
+    .last {
+        margin: 0;
+
+        h2 {
+            padding-top: 40px;
+            margin: 0 auto 20px;
+            font-size: 40px;
+            text-align: center;
+            font-weight: 900;
+        }
+
+        .main {
+            flex-direction: column;
+
+            .info {
+                width: 780px;;
+                margin: 10px auto;
+
+                h3 {
+                    font-size: 25px;
+                }
+                p {
+                    font-size: 20px;
+                    font-weight: 700;
+                }
+            }
+        }
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+// BEGINNING THE MOBILE VIEW FOR LAST SECTION
 @media(max-width: 500px) {
     .last {
         margin: 0;
@@ -62,8 +106,9 @@
         h2 {
             padding-top: 40px;
             margin: 0 auto 20px;
-            font-size: 30px;
+            font-size: 23px;
             text-align: center;
+            font-weight: 800;
         }
 
         .main {
