--- a/css/index.css
+++ b/css/index.css
@@ -563,6 +563,7 @@ header nav div.links a:hover {
 @media (max-width: 800px) {
   .last {
     margin: 0;
+    width: 100%;
   }
   .last h2 {
     padding-top: 40px;
@@ -575,7 +576,7 @@ header nav div.links a:hover {
     flex-direction: column;
   }
   .last .main .info {
-    width: 780px;
+    width: 760px;
     margin: 10px auto;
   }
   .last .main .info h3 {
