--- a/less/last.less
+++ b/less/last.less
@@ -58,6 +58,7 @@
 @media(max-width: 800px) {
     .last {
         margin: 0;
+        width: 100%;
 
         h2 {
             padding-top: 40px;
@@ -71,7 +72,7 @@
             flex-direction: column;
 
             .info {
-                width: 780px;;
+                width: 760px;;
                 margin: 10px auto;
 
                 h3 {
