just need to work on mobile site for about page

--- a/less/middle.less
+++ b/less/middle.less
@@ -13,7 +13,7 @@
         background-color: #DE3831;
 
         h2 {
-            font-family: 'Rajdhani', sans-serif;
+            font-family: 'Roboto', sans-serif;
             text-align: center;
             padding: 2%;
             font-size: 3rem;
@@ -170,10 +170,12 @@
             padding-top: 20px;
             margin: 0;
             h2 {
-                font-size: 30px;
+                font-size: 26px;
+                font-weight: 900;
             }
             p {
-                font-size: 15px;
+                font-size: 18px;
+                font-weight: 500;
             }
         }
 
