--- a/css/index.css
+++ b/css/index.css
@@ -169,13 +169,16 @@ header nav div.links a:hover {
 }
 @media (max-width: 800px) {
   header {
-    width: 800px;
+    width: 500px;
   }
   header nav {
-    width: 800px;
+    width: 490px;
   }
 }
 @media (max-width: 500px) {
+  header {
+    width: 100%;
+  }
   header nav {
     width: 100%;
   }
@@ -202,6 +205,7 @@ header nav div.links a:hover {
   border: 1px solid black;
   background-color: #070002;
   opacity: 0.7;
+  border-radius: 8px;
 }
 .intro .box a {
   color: #070002;
@@ -221,6 +225,7 @@ header nav div.links a:hover {
   color: #fff;
   letter-spacing: 2px;
   font-weight: 700;
+  font-family: 'Roboto', sans-serif;
 }
 .intro .box .myButton {
   box-shadow: 0px 1px 0px 0px #fff6af;
@@ -284,12 +289,12 @@ header nav div.links a:hover {
     width: 100%;
   }
   .intro .box {
-    width: 250px;
-    height: min-content;
+    width: 350px;
+    height: 200px;
     margin: 20px auto 0;
   }
   .intro .box h2 {
-    font-size: 15px;
+    font-size: 25px;
   }
   .intro .box p {
     font-size: 10px;
@@ -317,7 +322,7 @@ header nav div.links a:hover {
   background-color: #DE3831;
 }
 .middle div.mission h2 {
-  font-family: 'Rajdhani', sans-serif;
+  font-family: 'Roboto', sans-serif;
   text-align: center;
   padding: 2%;
   font-size: 3rem;
@@ -464,10 +469,12 @@ header nav div.links a:hover {
     margin: 0;
   }
   section.middle .mission h2 {
-    font-size: 30px;
+    font-size: 26px;
+    font-weight: 900;
   }
   section.middle .mission p {
-    font-size: 15px;
+    font-size: 18px;
+    font-weight: 500;
   }
   section.middle .first,
   section.middle .second,
