--- a/less/header.less
+++ b/less/header.less
@@ -56,9 +56,9 @@ header {
 // TABLET VIEW STARTS HERE
 @media(max-width: 800px) {
     header {
-        width:800px;
+        width: 500px;
         nav {
-            width: 800px;
+            width: 490px;
         }
     }
 }
@@ -78,6 +78,7 @@ header {
 @media(max-width: 500px) {
 
             header {
+                width: 100%;
                 nav {
                     width: 100%;
                     
