--- a/less/intro.less
+++ b/less/intro.less
@@ -12,6 +12,7 @@
         border: 1px solid black;
         background-color: #070002;
         opacity: 0.7;
+        border-radius: 8px;
         
         a {
             color: #070002;
@@ -33,6 +34,7 @@
             color: #fff;
             letter-spacing: 2px;
             font-weight: 700;
+            font-family: 'Roboto', sans-serif;
         }
 
 
@@ -122,12 +124,12 @@
         width: 100%;
 
         .box {
-            width: 250px;
-            height: min-content;
+            width: 350px;
+            height: 200px;
             margin: 20px auto 0;
             
             h2 {
-                font-size: 15px;
+                font-size: 25px;
             }
             p {
                 font-size: 10px;
