--- a/less/intro.less
+++ b/less/intro.less
@@ -16,6 +16,7 @@
         
         a {
             color: #070002;
+            text-decoration: none;
         }
 
         h2 {
@@ -58,6 +59,7 @@
         .myButton:hover {
             background:linear-gradient(to bottom, #ffab23 5%, #ffec64 100%);
             background-color:#ffab23;
+            font-weight: 750;
         }
         .myButton:active {
             position:relative;
@@ -124,19 +126,19 @@
         width: 100%;
 
         .box {
-            width: 350px;
-            height: 200px;
+            width: 450px;
+            height: 210px;
             margin: 20px auto 0;
             
             h2 {
-                font-size: 25px;
+                font-size: 20px;
             }
             p {
-                font-size: 10px;
+                font-size: 14px;
             }
             .myButton {
                 height: 39px;
-                width: 75px;
+                width: 90px;
                 padding: 0;
 
                 a {
