--- a/css/index-about.css
+++ b/css/index-about.css
@@ -22,58 +22,154 @@
   margin-bottom: 30px;
 }
 .intro-about h2 {
-  font-family: 'Alegreya Sans SC', sans-serif;
+  font-family: 'Raleway', sans-serif;
   text-align: center;
   padding-top: 30px;
   margin-bottom: 30px;
   font-size: 60px;
 }
 .intro-about p {
-  font-family: 'Raleway', sans-serif;
-  margin: 0 20px 20px;
+  font-family: 'Alegreya Sans SC', sans-serif;
+  margin: 0 50px 20px;
   text-align: center;
-  font-size: 20px;
+  font-size: 24px;
 }
 .the-team {
-  border: 2px solid #FFB612;
   margin: 5% 10%;
 }
 .the-team .top-three,
-.the-team .bttm-three {
+.the-team .bttm-two {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   margin: 5% 10%;
 }
 .the-team .top-three .content,
-.the-team .bttm-three .content {
+.the-team .bttm-two .content {
   background-color: #E3E3E3;
   width: 30%;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 35, 149, 0.19);
 }
 .the-team .top-three .content img,
-.the-team .bttm-three .content img {
-  margin: 20px 35px 0;
+.the-team .bttm-two .content img {
+  margin: 3% 30% 1%;
   height: auto;
-  width: 300px;
-  border-radius: 8px;
+  width: 150px;
+  border-radius: 15px;
 }
 .the-team .top-three .content .about h3,
-.the-team .bttm-three .content .about h3 {
+.the-team .bttm-two .content .about h3 {
   font-family: 'Raleway', sans-serif;
   text-align: left;
-  margin-left: 20px;
+  margin-left: 30px;
   width: 300px;
   padding: 10px;
   font-size: 25px;
   text-decoration: underline #FFB612;
 }
+.the-team .top-three .content .about .size,
+.the-team .bttm-two .content .about .size {
+  font-size: 23px;
+}
+.the-team .top-three .content .about .size-one,
+.the-team .bttm-two .content .about .size-one {
+  font-size: 20px;
+}
 .the-team .top-three .content .about p,
-.the-team .bttm-three .content .about p {
+.the-team .bttm-two .content .about p {
   font-family: 'Rajdhani', sans-serif;
   font-weight: 600;
   font-size: 20px;
   padding: 20px;
 }
 .the-team .top-three .content .about p span,
-.the-team .bttm-three .content .about p span {
+.the-team .bttm-two .content .about p span {
   font-size: 25px;
+}
+.outro {
+  background-color: #DE3831;
+  height: 30vh;
+}
+.outro div h2 {
+  font-family: 'Raleway', sans-serif;
+  padding-top: 30px;
+  margin-bottom: 30px;
+  margin-left: 50px;
+  font-size: 75px;
+}
+.outro div p {
+  font-family: 'Alegreya Sans SC', sans-serif;
+  margin: 0 50px 20px;
+  text-align: center;
+  font-size: 24px;
+  font-weight: 500;
+}
+.outro div p span {
+  font-family: 'Rajdhani', sans-serif;
+  font-size: 25px;
+  font-weight: 900;
+}
+.outro div p span.african {
+  font-family: 'Rajdhani', sans-serif;
+  color: #FFB612;
+  font-weight: 900;
+}
+.outro div p a {
+  text-decoration: underline;
+  color: #FFB612;
+}
+@media (max-width: 500px) {
+  body {
+    background-color: #007A4D;
+  }
+  .heading {
+    background-size: cover;
+    height: 300px;
+    width: 100%;
+  }
+  .heading h2 {
+    text-align: center;
+    margin: 100px auto;
+    font-size: 50px;
+    width: 340px;
+  }
+  .intro-about {
+    padding-top: 5px;
+    margin: 0;
+    height: 300px;
+  }
+  .intro-about h2 {
+    font-size: 30px;
+    font-weight: 900;
+    width: 100%;
+  }
+  .intro-about p {
+    font-size: 22px;
+    font-weight: 200;
+    margin: 0 auto;
+  }
+  .the-team .top-three,
+  .the-team .bttm-two {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    width: 100%;
+  }
+  .the-team .top-three .content,
+  .the-team .bttm-two .content {
+    margin: 0 auto 5px;
+    width: 100%;
+    height: min-content;
+    border-radius: none;
+  }
+  .outro {
+    padding-top: 5px;
+    margin: 0;
+    height: 400px;
+  }
+  .outro div h2 {
+    font-size: 40px;
+    text-align: center;
+    margin: 0 auto 50px;
+  }
 }
