just added another desktop option. will update font up next

--- a/less/header.less
+++ b/less/header.less
@@ -19,7 +19,7 @@ header {
                 color: #FFFFFF;
             }
             span {
-                color: #FFB612;
+                color: @yellow;
             }
 
             img {
@@ -34,13 +34,13 @@ header {
             align-items: flex-end;
             a {
                margin-right: 10px;
-               font-family: 'Rajdhani', sans-serif;
+               font-family: @raj;
                text-decoration: none;
                font-size: 15px;
                color: #FFFFFF;
 
                &:hover {
-                   color: #FFB612;
+                   color: @yellow;
                    text-decoration: underline overline;
                }
             }
