--- a/less/intro-about.less
+++ b/less/intro-about.less
@@ -19,7 +19,7 @@
 }
 
 .intro-about {
-    background-color: #FFB612;
+    background-color: @yellow;
     height: 20vh;
     margin-bottom: 30px;
 
@@ -68,7 +68,7 @@
                     width: 300px;
                     padding: 10px;
                     font-size: 25px;
-                    text-decoration: underline #FFB612;
+                    text-decoration: underline @yellow;
                 }
 
                 .size {
@@ -80,7 +80,7 @@
                 }
 
                 p {
-                    font-family: 'Rajdhani', sans-serif;
+                    font-family: @Raj;
                     font-weight: 600;
                     font-size: 20px;
                     padding: 20px;
@@ -114,20 +114,20 @@
         font-weight: 500;
 
         span {
-            font-family: 'Rajdhani', sans-serif;
+            font-family: @Raj;
             font-size: 25px;
             font-weight: 900;
         }
 
         span.african {
-            font-family: 'Rajdhani', sans-serif;
-            color: #FFB612;
+            font-family: @Raj;
+            color: @yellow;
             font-weight: 900;
         }
         
         a {
             text-decoration: underline;
-            color:#FFB612;
+            color:@yellow;
         }
     }
 }
