--- a/less/last.less
+++ b/less/last.less
@@ -9,7 +9,7 @@
         padding-top: 3%;
         width: max-content;
         color: #070002;
-        font-family: 'Rajdhani', sans-serif;
+        font-family: @raj;
         font-weight: 900;
         text-decoration: overline;
     }
@@ -45,7 +45,7 @@
             }
             p {
                 color: #070002;
-                font-family: 'Rajdhani', sans-serif;
+                font-family: @raj;
                 font-size: 1.5rem;
                 padding: 0 15px 20px;
             }
