--- a/css/index.css
+++ b/css/index.css
@@ -158,7 +158,7 @@ header nav div.links {
 }
 header nav div.links a {
   margin-right: 10px;
-  font-family: 'Rajdhani', sans-serif;
+  font-family: font-family 'Rajdhani', sans-serif;
   text-decoration: none;
   font-size: 15px;
   color: #FFFFFF;
@@ -257,6 +257,14 @@ header nav div.links a:hover {
 .intro .box hr {
   border-top: 1px solid #8c8b8b;
   margin: 0;
+}
+@media (max-width: 1600px) {
+  .intro .box {
+    width: 500px;
+  }
+  .intro .box p {
+    padding: 5px;
+  }
 }
 @media (max-width: 800px) {
   .intro {
@@ -388,7 +396,7 @@ header nav div.links a:hover {
 .middle .first .target p,
 .middle .second .target p,
 .middle .third .target p {
-  font-family: 'Rajdhani', sans-serif;
+  font-family: font-family 'Rajdhani', sans-serif;
   font-size: 1.3rem;
   font-weight: 700;
   letter-spacing: 2px;
@@ -405,7 +413,7 @@ header nav div.links a:hover {
   margin-right: 50px;
 }
 .second ul li {
-  font-family: 'Rajdhani', sans-serif;
+  font-family: font-family 'Rajdhani', sans-serif;
   font-size: 1.3rem;
   font-weight: 700;
   letter-spacing: 2px;
@@ -415,6 +423,30 @@ header nav div.links a:hover {
   text-decoration: underline #FFB612;
   color: #070002;
   font-weight: 800;
+}
+@media (max-width: 1600px) {
+  .middle .first .image,
+  .middle .second .image,
+  .middle .third .image {
+    width: 100%;
+  }
+  .middle .first .image img,
+  .middle .second .image img,
+  .middle .third .image img {
+    width: 460px;
+    margin: 0 25px;
+  }
+  .middle .first .target,
+  .middle .second .target,
+  .middle .third .target {
+    height: min-content;
+    width: 800px;
+  }
+  .middle .first .target p,
+  .middle .second .target p,
+  .middle .third .target p {
+    font-size: 18px;
+  }
 }
 @media (max-width: 800px) {
   .middle {
@@ -531,7 +563,7 @@ header nav div.links a:hover {
   padding-top: 3%;
   width: max-content;
   color: #070002;
-  font-family: 'Rajdhani', sans-serif;
+  font-family: font-family 'Rajdhani', sans-serif;
   font-weight: 900;
   text-decoration: overline;
 }
@@ -565,7 +597,7 @@ header nav div.links a:hover {
 }
 .last .main .info p {
   color: #070002;
-  font-family: 'Rajdhani', sans-serif;
+  font-family: font-family 'Rajdhani', sans-serif;
   font-size: 1.5rem;
   padding: 0 15px 20px;
 }
