--- a/less/intro.less
+++ b/less/intro.less
@@ -41,7 +41,7 @@
 
         .myButton {
             box-shadow: 0px 1px 0px 0px #fff6af;
-            background:linear-gradient(to bottom, #ffec64 5%, #FFB612, 100%);
+            background:linear-gradient(to bottom, #ffec64 5%, @yellow, 100%);
             background-color:#ffec64;
             border-radius:6px;
             border:1px solid #ffaa22;
@@ -70,6 +70,20 @@
         hr {
             border-top: 1px solid #8c8b8b;
             margin: 0; 
+        }
+    }
+}
+
+
+// LAPTOP VERSION 2
+@media(max-width: 1600px) {
+    .intro {
+        .box {
+            width: 500px;
+
+            p {
+                padding: 5px;
+            }
         }
     }
 }
