--- a/less/middle.less
+++ b/less/middle.less
@@ -66,20 +66,20 @@
                     font-family: 'Raleway', sans-serif;
                     font-size: 2.5rem;
                     margin-bottom: 2%;
-                    text-decoration:  underline #FFB612;
+                    text-decoration:  underline @yellow;
                     letter-spacing: 1px;
                     padding: 2%;
                 }
         
                 p {
-                    font-family: 'Rajdhani', sans-serif;
+                    font-family: @raj;
                     font-size: 1.3rem;
                     font-weight: 700;
                     letter-spacing: 2px;
                     padding: 4%;
 
                     &:hover {
-                        background-color: #FFB612;
+                        background-color: @yellow;
                         color: #070002;
                         font-weight: 800;
                     }
@@ -96,14 +96,14 @@
         }
         ul {
             li {
-                font-family: 'Rajdhani', sans-serif;
+                font-family: @raj;
                 font-size: 1.3rem;
                 font-weight: 700;
                 letter-spacing: 2px;
                 padding: 1%;
 
                 &:hover {
-                    text-decoration:  underline #FFB612;
+                    text-decoration:  underline @yellow;
                     color: #070002;
                     font-weight: 800;
                 }
@@ -112,6 +112,40 @@
         
         
 }
+
+
+
+// DESKTOP VERSION STARTS HERE!
+
+@media(max-width: 1600px) {
+    .middle {
+        .first, .second, .third {
+            .image {
+                width: 100%;
+
+                img {
+                    width: 460px;
+                    margin: 0 25px;
+                }
+            }
+
+            .target {
+                height: min-content;
+                width: 800px;
+
+                p {
+                    font-size: 18px;
+                }
+            }
+        }
+    }
+}
+
+
+
+
+
+
 
 
 // TABLET VIEW STARTS HERE!!
