--- a/css/index-about.css
+++ b/css/index-about.css
@@ -77,7 +77,6 @@
 }
 .the-team .top-three .content .about p,
 .the-team .bttm-two .content .about p {
-  font-family: 'Rajdhani', sans-serif;
   font-weight: 600;
   font-size: 20px;
   padding: 20px;
@@ -105,18 +104,31 @@
   font-weight: 500;
 }
 .outro div p span {
-  font-family: 'Rajdhani', sans-serif;
   font-size: 25px;
   font-weight: 900;
 }
 .outro div p span.african {
-  font-family: 'Rajdhani', sans-serif;
   color: #FFB612;
   font-weight: 900;
 }
 .outro div p a {
   text-decoration: underline;
   color: #FFB612;
+}
+@media (max-width: 1600px) {
+  .heading h2 {
+    margin: 140px auto;
+  }
+  .intro-about {
+    height: 30vh;
+  }
+  .the-team .top-three .content .about h3,
+  .the-team .bttm-two .content .about h3 {
+    text-align: center;
+    font-size: 24px;
+    margin: 3% auto;
+    padding: 0;
+  }
 }
 @media (max-width: 500px) {
   body {
