--- a/less/intro-about.less
+++ b/less/intro-about.less
@@ -80,7 +80,7 @@
                 }
 
                 p {
-                    font-family: @Raj;
+                    // font-family: @Raj;
                     font-weight: 600;
                     font-size: 20px;
                     padding: 20px;
@@ -114,13 +114,13 @@
         font-weight: 500;
 
         span {
-            font-family: @Raj;
+            // font-family: @Raj;
             font-size: 25px;
             font-weight: 900;
         }
 
         span.african {
-            font-family: @Raj;
+            // font-family: @Raj;
             color: @yellow;
             font-weight: 900;
         }
@@ -131,6 +131,60 @@
         }
     }
 }
+
+
+
+
+
+
+
+
+
+
+// DESKTOP
+@media(max-width: 1600px) {
+    .heading {
+            h2 {
+                margin: 140px auto;
+            }
+    }
+
+    .intro-about {
+        height: 30vh;
+    }
+
+    .the-team {
+        .top-three, .bttm-two {
+            .content {
+                .about {
+                    h3 {
+                        text-align: center;
+                        font-size: 24px;
+                        margin: 3% auto;
+                        padding: 0;
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 // MOBILE VIEW STARTS HERE!!
