--- a/css/index-about.css
+++ b/css/index-about.css
@@ -1,3 +1,6 @@
+header nav .links a .meet {
+  color: #FFB612;
+}
 .heading {
   background-image: url("/images/teamwork.jpg");
   background-size: cover;
