--- a/less/intro-about.less
+++ b/less/intro-about.less
@@ -1,3 +1,13 @@
+header {
+    nav {
+        .links {
+            a .meet {
+                color: @yellow;
+            }
+        }
+    }
+}
+
 .heading {
     background-image: url("/images/teamwork.jpg");
     background-size: cover;
