trying to update my the font of the header

--- a/less/intro-about.less
+++ b/less/intro-about.less
@@ -1,8 +1,16 @@
 header {
     nav {
         .links {
-            a .meet {
-                color: @yellow;
+            a {
+                .meet {
+                    color: @yellow;
+                }
+            }
+        }
+
+        .logo {
+            a h1 {
+                // font-weight: 400;
             }
         }
     }
