adding the correct links to the website

--- a/less/header.less
+++ b/less/header.less
@@ -34,7 +34,7 @@ header {
             align-items: flex-end;
             a {
                margin-right: 10px;
-               font-family: @raj;
+               .myText();
                text-decoration: none;
                font-size: 15px;
                color: #FFFFFF;
