--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+.myText {
+  font-family: 'Rajdhani', sans-serif;
+  font-weight: 500;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -158,7 +162,8 @@ header nav div.links {
 }
 header nav div.links a {
   margin-right: 10px;
-  font-family: font-family 'Rajdhani', sans-serif;
+  font-family: 'Rajdhani', sans-serif;
+  font-weight: 500;
   text-decoration: none;
   font-size: 15px;
   color: #FFFFFF;
@@ -397,7 +402,8 @@ header nav div.links a:hover {
 .middle .first .target p,
 .middle .second .target p,
 .middle .third .target p {
-  font-family: font-family 'Rajdhani', sans-serif;
+  font-family: 'Rajdhani', sans-serif;
+  font-weight: 500;
   font-size: 1.3rem;
   font-weight: 400;
   letter-spacing: 2px;
@@ -414,7 +420,8 @@ header nav div.links a:hover {
   margin-right: 50px;
 }
 .second ul li {
-  font-family: font-family 'Rajdhani', sans-serif;
+  font-family: 'Rajdhani', sans-serif;
+  font-weight: 500;
   font-size: 1.3rem;
   font-weight: 700;
   letter-spacing: 2px;
@@ -564,7 +571,8 @@ header nav div.links a:hover {
   padding-top: 3%;
   width: max-content;
   color: #070002;
-  font-family: font-family 'Rajdhani', sans-serif;
+  font-family: 'Rajdhani', sans-serif;
+  font-weight: 500;
   font-weight: 900;
   text-decoration: overline;
 }
@@ -598,7 +606,8 @@ header nav div.links a:hover {
 }
 .last .main .info p {
   color: #070002;
-  font-family: font-family 'Rajdhani', sans-serif;
+  font-family: 'Rajdhani', sans-serif;
+  font-weight: 500;
   font-size: 1.5rem;
   padding: 0 15px 20px;
 }
