--- a/less/middle.less
+++ b/less/middle.less
@@ -73,7 +73,7 @@
                 }
         
                 p {
-                    font-family: @raj;
+                    .myText();
                     font-size: 1.3rem;
                     font-weight: 400;
                     letter-spacing: 2px;
@@ -97,7 +97,7 @@
         }
         ul {
             li {
-                font-family: @raj;
+                .myText();
                 font-size: 1.3rem;
                 font-weight: 700;
                 letter-spacing: 2px;
